--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,12 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "viktorgreamer\\": "viktorgreamer/",
+            "Vendor\\Namespace\\": ""
+        }
+    }
+
 }
